Fixed layout page

--- a/test_work_fin-12/Views/Shared/_Layout.cshtml
+++ b/test_work_fin-12/Views/Shared/_Layout.cshtml
@@ -6,7 +6,11 @@
     <title>@ViewData["Title"] - test_work_fin_12</title>
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <!-- <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" /> -->
+        <!-- <link rel="stylesheet" href="~/css/main.css"> -->
+        <link rel="stylesheet" href="~/css/bootstrap.min.css">
+        <link rel="stylesheet" href="~/css/font-awesome.min.css">
+	    	
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
