--- a/test_work_fin-12/Views/User/Register.cshtml
+++ b/test_work_fin-12/Views/User/Register.cshtml
@@ -3,8 +3,8 @@
 
 <div class="ibox-content m-b-sm border-bottom marginmy">
     <div class="col-md-8 col-md-offset-2" style="margin-left: 178px;">
-        <h2>Зарегестрироваться на TCP-Chat</h2>
-        <form asp-controller="Account" asp-action="Register" method="post" class="form-horizontal" role="form">
+        <h2>Зарегестрироваться на Test_work_fin_12</h2>
+        <form asp-route-returnUrl="@ViewData["ReturnUrl"]" asp-controller="Account" asp-action="Register" method="post" class="form-horizontal" role="form">
             <h4>Создайте свой аккаунт.</h4>
             <hr />
             <div class="form-group">
