Added List Photo

--- a/test_work_fin-12/Views/Shared/_Layout.cshtml
+++ b/test_work_fin-12/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
         <!-- <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" /> -->
         <!-- <link rel="stylesheet" href="~/css/main.css"> -->
         <link rel="stylesheet" href="~/css/bootstrap.min.css">
+        <link rel="stylesheet" href="~/css/Site.css">
+        <link rel="stylesheet" href="~/css/card.css">
         <link rel="stylesheet" href="~/css/font-awesome.min.css">
 	    	
     </environment>
@@ -55,9 +57,9 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <!-- <div class="container">
             &copy; 2019 - test_work_fin_12 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+        </div> -->
     </footer>
 
     <environment include="Development">
