--- a/test_work_fin-12/Views/Cafe/List.cshtml
+++ b/test_work_fin-12/Views/Cafe/List.cshtml
@@ -13,8 +13,8 @@
     @{
         foreach (var item in Model.CafeListVM)
         {
-           
-          <div class="col-sm-4 col-lg-4 col-md-4" style="float: left;"  id="idImagesClick" data-id="@item.Id">
+           <form asp-controller="Home" asp-action="Rating" method="post" class="form-horizontal">
+          <div class="col-sm-4 col-lg-4 col-md-4" style="float: left;"  asp-for="@item.Id" name="id" data-id="@item.Id">
             <div class="product-wrap">
             <div class="product-image">
               <a href=""><img src="../@item.ImageUrl" alt=""/></a>
@@ -38,123 +38,51 @@
               <h3 style="font-size: 17pt;">Название кафе: @item.Name</h3>
               <h3>Имя пользователя: @item.User.UserName</h3>
               <h3>Описание: @item.Description</h3>
-              <div class="price">@item.Score</div>  
+              <div class="price">@item.Score</div> 
+              
+          </div>
 
-            <div class="star-rating" data-id="@item.Id" >
-              <div class="star-rating__wrap">
-                <input class="star-rating__input" id="star-rating-5"  onclick="click5()"  type="radio" name="rating" value="5">
-                <label class="star-rating__ico fa fa-star-o fa-lg" for="star-rating-5" title="5 out of 5 stars"></label>
-                <input class="star-rating__input" id="star-rating-4" onclick="click4()"  type="radio" name="rating" value="4">
-                <label class="star-rating__ico fa fa-star-o fa-lg" for="star-rating-4" title="4 out of 5 stars"></label>
-                <input class="star-rating__input" id="star-rating-3"  onclick="click3()"  type="radio" name="rating" value="3">
-                <label class="star-rating__ico fa fa-star-o fa-lg" for="star-rating-3" title="3 out of 5 stars"></label>
-                <input class="star-rating__input" id="star-rating-2" onclick="click2()" type="radio" name="rating" value="2">
-                <label class="star-rating__ico fa fa-star-o fa-lg" for="star-rating-2" title="2 out of 5 stars"></label>
-                <input class="star-rating__input" id="star-rating-1"  onclick="click1()" type="radio" name="rating" value="1">
-                <label class="star-rating__ico fa fa-star-o fa-lg" for="star-rating-1" title="1 out of 5 stars"></label>
-              </div>
-            </div>
+    <hr />
+    <div class="form-group">
+        <label asp-for="Rating" class="col-lg-12 col-sm-12 control-label" >Rating</label>
+        <div class="col-lg-12">
+            <span class="rating">
+                @for (int i = 1; i <= 5; i++)
+                {
+                    var starClass = "star";
+                    if (@item.Rating == 6 - i)
+                    {
+                        starClass += " active";
+                    }
+                    <span data-value="@(6 - i)" class="@starClass"></span>
+                }
+            </span>
         </div>
+        <input asp-for="Rating" />
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-12">
+            <input type="submit" class="btn btn-primary"  value="Submit" />
         </div>
+    </div>
+        <div>
+          @item.Content
         </div>
-            
+
+          </div>
+          </div>
+
+              <input name="id" value="@item.Id" type="hidden"/>
+              </form>
         }
     }
 
+
     
+@section Scripts {
+<script src="~/js/rating.js"></script>
+    
+}
 
-
-    <script>
-
-       
-
-      function click5() {
-
-              var r5 = document.getElementById("star-rating-5").value;
-              var rid = document.getElementById("idImagesClick");
-              var idImages = rid.getAttribute('data-id');
-              debugger;
-
-                $.ajax({
-                    type: 'POST',
-                    url: '@Url.Action("Rating", "Cafe")',
-                    data: {
-                        rating: r5,
-                        id: idImages,
-                    },
-                    success: function (data) {
-                        console.log('success!');
-                    }
-                });
-            }
-
-      function click4() {
-              var r4 = document.getElementById("star-rating-4").value;
-              var rid = document.getElementById("idImagesClick");
-              var idImages = rid.getAttribute('data-id');
-                $.ajax({
-                    type: 'POST',
-                    url: '@Url.Action("Rating", "Cafe")',
-                    data: {
-                        rating: r4,
-                        id: idImages,
-                    },
-                    success: function (data) {
-                        console.log('success!');
-                    }
-                });
-            }
-      function click3() {
-              var r3 = document.getElementById("star-rating-3").value;
-              var rid = document.getElementById("idImagesClick");
-              var idImages = rid.getAttribute('data-id');
-
-                $.ajax({
-                    type: 'POST',
-                    url: '@Url.Action("Rating", "Cafe")',
-                    data: {
-                        rating: r3,
-                        id: idImages,
-                    },
-                    success: function (data) {
-                        console.log('success!');
-                    }
-                });
-            }
-      function click2() {
-              var r2 = document.getElementById("star-rating-2").value;
-              var rid = document.getElementById("idImagesClick");
-              var idImages = rid.getAttribute('data-id');
-
-                $.ajax({
-                    type: 'POST',
-                    url: '@Url.Action("Rating", "Cafe")',
-                    data: {
-                        rating: r2,
-                        id: idImages,
-                    },
-                    success: function (data) {
-                        console.log('success!');
-                    }
-                });
-            }
-      function click1() {
-              var r1 = document.getElementById("star-rating-1").value;
-              var rid = document.getElementById("idImagesClick");
-              var idImages = rid.getAttribute('data-id');
-
-                $.ajax({
-                    type: 'POST',
-                    url: '@Url.Action("Rating", "Cafe")',
-                    data: {
-                        rating: r1,
-                        id: idImages,
-                    },
-                    success: function (data) {
-                        console.log('success!');
-                    }
-                });
-            }
-    </script>
 
 
